[fix]#14502 better title alignement under icon in cards

--- a/modules/_dominos.scss
+++ b/modules/_dominos.scss
@@ -84,7 +84,7 @@
 				width: auto;
 
 				.title-icon i{
-					font-size: 20px;
+					font-size: 18px;
     				padding-right: 5px;
 				}
 			}
